lazy_link/tests/ui/no_resolver.stderr
error: missing resolver = "..." attribute
 --> tests/ui/no_resolver.rs:3:1
  |
3 | #[lazy_link]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `lazy_link` (in Nightly builds, run with -Z macro-backtrace for more info)
