lazy_link/tests/ui/no_resolver.rs
use lazy_link::lazy_link;

#[lazy_link]
extern "C" {
    fn method_01();
}

fn main() {}
